python3-oq-engine (3.16.3-1~xenial01) xenial; urgency=low

  [Kendra Johnson]
  * Fixed a bug in hazardlib.geo.surface.multi affecting the disaggregation

  [Michele Simionato]
  * Fixed the damage state header in the aggrisk outputs
  * Fixed the realizations extractor for scenario calculations starting from
    ruptures with multiple different tectonic region types
  * Fixed a subtle mutability bug affecting various GMPEs
  * Fixed rupture sampling in the case of a same source appearing in multiple
    logic tree branches
  * Fixed a bug in classical_damage causing a ValueError: could not broadcast
    input array from shape (X,Y) into shape (X,) in some situations
  * Fixed the CSV importer so that it can import exported GMFs even in
    the presence of a `custom_site_id`

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Tue, 16 May 2023 08:07:48 +0000

python3-oq-engine (3.16.2-1~xenial01) xenial; urgency=low

  [Michele Simionato, Paolo Tormene]
  * Fixed a bug in extract_agg_curves affecting the QGIS plugin
  * Fixed a bug in rare scenario calculations causing an IndexError in the
    line rctx.clon = c.lons[rctx.sids]

  [Marco Pagani, Michele Simionato]
  * Fixed a bug in the source writer when writing NonParametricSources
  * Removed the conditional spectrum calculator (it was experimental and
    not working properly in many cases)

  [Michele Simionato]
  * Now we log only when the DB schema is really upgraded
  * Fixed the documentation about extracting hazard curves and maps
  * Fixed KeyError in calculations using the EasternCan15Mid with PGA
  * The `minimum_magnitude` parameter was ignored for multiFault sources
  * Replaced hard-coded limit to 25 levels in the MRD postprocessor
    with a simple warning
  * Fixed bug in `oq zip`: when starting from a directory different from the
    job.ini directory, .hdf5 files for nonparametric ruptures were not included
  * Fixed a 32 bit / 64 bit bug in the hinge function of Kuehn et al. (2020)