@@ -3,7 +3,7 @@
 description = Classical PSHA using Alaska 2007 active shallow crust grid model
 calculation_mode = classical
 concurrent_tasks = 10
-pmap_max_gb = 2E-5
+pmap_max_gb = 4E-7
 max_sites_disagg = 5
 split_sources = false
 random_seed = 23
