@@ -1,3 +1,6 @@
+  [Michele Simionato]
+  * Fixed severe bug affecting the classical tiling calculator
+
 python3-oq-engine (3.16.3-1~xenial01) xenial; urgency=low
 
   [Kendra Johnson]
